--- a/wp-content/themes/workingnyc/views/search.twig
+++ b/wp-content/themes/workingnyc/views/search.twig
@@ -2,59 +2,69 @@
 
 {% block content %}
   <div class="bg-scale-4">
-      <header class="o-header block" style="padding: calc(var(--nyco-grid) * 12)">
-        <div class="c-utility p-0 min-h-0">
-          <a class="link-icon mie-auto" href="{{ site.url }}">
-            <svg aria-hidden="true" class="icon-ui rtl:flip">
-              <use href="#lucide-chevron-left"></use>
-            </svg>
-
-            <span>{{ __('Home', 'WNYC') }}</span>
-          </a>
-        </div>
-        {% if term != '' %}
-          <div class="o-header__title" style="margin-top: calc(var(--nyco-typography-margin-bottom) * 1.5);">
-            <h1 id="page-heading" class="o-header__heading">{{__('Search results', 'WNYC')}}</h1>
+      <header class="o-header block px-4 tablet:px-6">
+        <div class="tablet:px-6" style="max-width: var(--nyco-dimension-content-width)"> {# TODO: figure out how to import px-12 from tailwind #}
+          <div class="c-utility p-0 min-h-0" style="margin-bottom: calc(var(--nyco-typography-margin-bottom) * 1.5);">
+            <a class="link-icon mie-auto" href="{{ site.url }}">
+              <svg aria-hidden="true" class="icon-ui rtl:flip">
+                <use href="#lucide-chevron-left"></use>
+              </svg>
+              <span>{{ __('Home', 'WNYC') }}</span>
+            </a>
           </div>
-        {% endif %}
-        {% include 'partials/search-input.twig' %}
+          <div class="o-header__title mt-0" style="">
+            <h1 id="page-heading" class="o-header__heading">{{ term == '' ? __('Search', 'WNYC') : __('Search results', 'WNYC')}}</h1>
+          </div>
+          {% include 'partials/search-form.twig' %}
+          </div>
       </header>
   </div>
 
-  {% if term != '' %}
-    <section class="desktop:px-6">
-      <div class="wrap desktop:px-6">
+  <section class="px-4 tablet:px-6">
+    {% if term != '' %}
+      {% if posts|length > 0 %}
         {% block list_sidebar %}
         {% endblock %}
-      </div>
-      <div class="desktop:px-6">
-        {% block before_list %}
-        <h2 class="text-p font-p inline-block my-4">
-          {{ __('Showing {{ TOTAL_VISIBLE }} results for "{{ TERM }}".')|replace({'{{ TOTAL_VISIBLE }}': posts|length, '{{ TERM }}': term}) }}
-        </h2>
-        {% endblock %}
-        <div class="grid gap-3 desktop:grid-cols-2 mb-3">
-          {% block post_list %}
-            {% for post in posts %}
-              {% if post.post_type == 'jobs' %}
-                {% include 'jobs/job.twig' with {
-                  this: {
-                    post: post
-                  }
-                } %}
-              {% elseif post.post_type == 'programs' %}
-                {% include 'programs/program.twig' with {
-                  this: {
-                    post: post
-                  }
-                } %}
-              {% endif %}
-            {% endfor %}
+        <div class="tablet:px-6">
+          {% block before_list %}
+          <h2 class="text-p font-p inline-block my-4">
+            {{ __('Showing {{ TOTAL_VISIBLE }} results for "{{ TERM }}".')|replace({'{{ TOTAL_VISIBLE }}': posts|length, '{{ TERM }}': term}, 'WNYC') }}
+          </h2>
           {% endblock %}
-        </div>
-        {% block after_list %}
-        {% endblock %}
-      </div> 
-    </section> 
-  {% endif %}
+          <div class="grid gap-3 desktop:grid-cols-2 mb-3">
+            {% block post_list %}
+              {% for post in posts %}
+                {% if post.post_type == 'jobs' %}
+                  {% include 'jobs/job.twig' with {
+                    this: {
+                      post: post
+                    }
+                  } %}
+                {% elseif post.post_type == 'programs' %}
+                  {% include 'programs/program.twig' with {
+                    this: {
+                      post: post
+                    }
+                  } %}
+                {% endif %}
+              {% endfor %}
+            {% endblock %}
+          </div>
+          {% block after_list %}
+          {% endblock %}
+        </div> 
+      {% else %}
+      <div class="my-3 tablet:my-4 tablet:px-6">
+        <h4>{{__('No results for "{{ TERM }}"'|replace({'{{ TERM }}': term}), 'WNYC')}}</h4>
+        <h5 style="margin-top: var(--nyco-typography-margin-bottom);">{{__('Search help', 'WNYC')}}</h5>
+        <list>
+          <li class="m-0">{{__('Check your search for typos', 'WNYC')}}</li>
+          <li class="m-0">{{__('Use generic search terms', 'WNYC')}}</li>
+          <li class="m-0">{{__('Browse our <a href="{{ PROGRAMS_URL }}">programs</a> and <a href="{{ JOBS_URL }}">jobs</a>'|replace({'{{ PROGRAMS_URL }}': site.url ~ '/programs', '{{ JOBS_URL }}': site.url ~ '/jobs'}), 'WNYC')}}</li>
+        </list>
+        <h5 style="margin-top: var(--nyco-typography-margin-bottom);">{{__('If you still can\'t find what you\'re looking for, <a href="{{ FEEDBACK_URL }}">send feedback</a> to improve our site.'|replace({'{{ FEEDBACK_URL }}': 'https://airtable.com/shrfQGpXvo9mmmHpJ'}), 'WNYC')}}</h5>
+      </div>
+      {% endif %}
+    {% endif %}
+  </section> 
 {% endblock %}
