--- a/wp-content/themes/workingnyc/views/search.twig
+++ b/wp-content/themes/workingnyc/views/search.twig
@@ -29,9 +29,9 @@
           {% block before_list %}
           <h2 class="text-p font-p inline-block my-4">
             {% if posts|length > 1 %}
-              {{ __('Showing {{ TOTAL_VISIBLE }} results for "{{ TERM }}".')|replace({'{{ TOTAL_VISIBLE }}': posts|length, '{{ TERM }}': term}) }}
+              {{ __('Showing {{ TOTAL_VISIBLE }} results for "{{ TERM }}".', 'WNYC')|replace({'{{ TOTAL_VISIBLE }}': posts|length, '{{ TERM }}': term}) }}
             {% else %}
-              {{ __('Showing 1 result for "{{ TERM }}".')|replace({'{{ TERM }}': term}) }}
+              {{ __('Showing 1 result for "{{ TERM }}".', 'WNYC')|replace({'{{ TERM }}': term}) }}
             {% endif %}
           </h2>
           {% endblock %}
@@ -59,14 +59,14 @@
         </div> 
       {% else %}
       <div class="my-3 tablet:my-4 tablet:px-6">
-        <h4>{{__('No results for "{{ TERM }}"')|replace({'{{ TERM }}': term})}}</h4>
+        <h4>{{__('No results for "{{ TERM }}"', 'WNYC')|replace({'{{ TERM }}': term})}}</h4>
         <h5 style="margin-top: var(--nyco-typography-margin-bottom);">{{__('Search help', 'WNYC')}}</h5>
         <list>
           <li class="m-0">{{__('Check your search for typos', 'WNYC')}}</li>
           <li class="m-0">{{__('Use generic search terms', 'WNYC')}}</li>
-          <li class="m-0">{{__('Browse our <a href="{{ PROGRAMS_URL }}">programs</a> and <a href="{{ JOBS_URL }}">jobs</a>')|replace({'{{ PROGRAMS_URL }}': site.url ~ '/programs', '{{ JOBS_URL }}': site.url ~ '/jobs'})}}</li>
+          <li class="m-0">{{__('Browse our <a href="{{ PROGRAMS_URL }}">programs</a> and <a href="{{ JOBS_URL }}">jobs</a>', 'WNYC')|replace({'{{ PROGRAMS_URL }}': site.url|last == '/' ? site.url ~ 'programs' : site.url ~ '/programs', '{{ JOBS_URL }}': site.url|last == '/' ? site.url ~ 'jobs' : site.url ~ '/jobs'})}}</li>
         </list>
-        <h5 style="margin-top: var(--nyco-typography-margin-bottom);">{{__('If you still can\'t find what you\'re looking for, {{ FEEDBACK }} to improve our site.')|replace({'{{ FEEDBACK }}': '<a href="https://airtable.com/shrfQGpXvo9mmmHpJ">send us feedback</a>'})}}</h5>
+        <h5 style="margin-top: var(--nyco-typography-margin-bottom);">{{__('If you still can\'t find what you\'re looking for, {{ FEEDBACK }} to improve our site.', 'WNYC')|replace({'{{ FEEDBACK }}': '<a href="https://airtable.com/shrfQGpXvo9mmmHpJ">send us feedback</a>'})}}</h5>
       </div>
       {% endif %}
     {% endif %}
