filter with three buttons

--- a/wp-content/themes/workingnyc/views/search/search-overlay.twig
+++ b/wp-content/themes/workingnyc/views/search/search-overlay.twig
@@ -9,7 +9,7 @@
     <div class="justify-center flex">
       <div class="block w-full" style="max-width: var(--nyco-dimension-content-width)">
         <label class="label pb-1">{{__('Search for work or services', 'WNYC')}}</label>
-        {% include 'partials/search-form.twig' %}
+        {% include 'search/search-form.twig' %}
       </div>
     </div>
   </div>
