--- a/wp-content/themes/workingnyc/views/base.twig
+++ b/wp-content/themes/workingnyc/views/base.twig
@@ -42,7 +42,7 @@
     {% block header %}
       {% include 'objects/navigation.twig' %}
       {% include 'objects/languages-dropdown.twig' %}
-      {% include 'partials/search-overlay.twig' %}
+      {% include 'search/search-overlay.twig' %}
     {% endblock %}
 
     {% if fn('constant', 'SUPPORT_IE_11') and fn('is_IE') %}
