--- a/wp-content/themes/workingnyc/views/objects/navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/navigation.twig
@@ -3,11 +3,11 @@
     <span class="sr-only">Working N Y C</span>
 
     <svg aria-hidden="true" class="o-navigation__svg hidden tablet:inline fill-text text-brand" width="160" height="23">
-      <use href="#logo-wknyc-horizontal"></use>
+      <use href="#logo-jnyc-horizontal"></use>
     </svg>
 
     <svg aria-hidden="true" class="o-navigation__svg tablet:hidden fill-text text-brand" width="78" height="48">
-      <use href="#logo-wknyc-stacked"></use>
+      <use href="#logo-jnyc-stacked"></use>
     </svg>
   </a>
 
