--- a/wp-content/themes/workingnyc/views/objects/attribution.twig
+++ b/wp-content/themes/workingnyc/views/objects/attribution.twig
@@ -21,7 +21,7 @@
   <div class="o-attribution__flex o-footer__divider">
     <div>
       <p class="o-attribution__byline">
-        {{ __('Working NYC is maintained by the <span class="sr-only">The Mayor\'s Office for Economic Opportunity and The Mayor\'s Office of Workforce Development</span>', 'WNYC') }}
+        {{ __('Job Ready by Jobs NYC is maintained by the <span class="sr-only">The Mayor\'s Office for Economic Opportunity and The Mayor\'s Office of Workforce Development</span>', 'WNYC') }}
       </p>
 
       <svg style="max-width: 100%" width="573" height="65" viewBox="0 0 1509 171" class="fill-text" role="img">
