remove 'by' if there is no program agency

--- a/wp-content/themes/workingnyc/views/programs/program.twig
+++ b/wp-content/themes/workingnyc/views/programs/program.twig
@@ -17,7 +17,10 @@
       </a>
 
       <p class="c-card__subtitle text-alt">
-        <b>{{ post.program_title }}</b> {{ __('by', 'WNYC') }} {{ post.program_agency }}
+        <b>{{ post.program_title }}</b> 
+        {% if post.program_agency is not empty %} 
+          {{ __('by', 'WNYC') }} {{ post.program_agency }}
+        {% endif %}
       </p>
     </span>
   </header>
