--- a/wp-content/themes/workingnyc/views/home.twig
+++ b/wp-content/themes/workingnyc/views/home.twig
@@ -16,7 +16,7 @@
           <div class="text-center">
             <h1 id="page-heading" class="m-0" style="line-height: 0">
               <svg class="fill-text stroke-text text-brand" width="256" height="79" role="img">
-                <title>Working N Y C</title>
+                <title>Job Ready by Jobs N Y C</title>
 
                 <use href="#logo-jnyc-horizontal-w-ribbon"></use>
               </svg>
