--- a/wp-content/themes/workingnyc/views/objects/attribution.twig
+++ b/wp-content/themes/workingnyc/views/objects/attribution.twig
@@ -2,7 +2,7 @@
   <nav aria-label="{{ footer_menu.name }}" class="nav-block tablet:nav-inline tablet:flex items-center">
     <a class="uppercase text-small no-underline tablet:inline-flex tablet:p-0" href="{{ fn('get_home_url') }}">
       <svg class="fill-text stroke-text text-brand" width="163" height="48" role="img">
-        <title>Working N Y C</title>
+        <title>Job Ready by Jobs N Y C</title>
 
         <use href="#logo-jnyc-horizontal-w-ribbon"></use>
       </svg>
