--- a/wp-content/themes/workingnyc/views/search.twig
+++ b/wp-content/themes/workingnyc/views/search.twig
@@ -75,7 +75,8 @@
           <li class="m-0">{{__('Use generic search terms', 'WNYC')}}</li>
           <li class="m-0">{{__('Browse our <a href="{{ PROGRAMS_URL }}">programs</a> and <a href="{{ JOBS_URL }}">jobs</a>', 'WNYC')|replace({'{{ PROGRAMS_URL }}': site.url|last == '/' ? site.url ~ 'programs' : site.url ~ '/programs', '{{ JOBS_URL }}': site.url|last == '/' ? site.url ~ 'jobs' : site.url ~ '/jobs'})}}</li>
         </list>
-        <h5 style="margin-top: var(--nyco-typography-margin-bottom);">{{__('If you still can\'t find what you\'re looking for, {{ FEEDBACK }} to improve our site.', 'WNYC')|replace({'{{ FEEDBACK }}': '<a href="https://airtable.com/shrfQGpXvo9mmmHpJ">send us feedback</a>'})}}</h5>
+        <h5 style="margin-top: var(--nyco-typography-margin-bottom);">{{__('If you still can\'t find what you\'re looking for, {{ FEEDBACK }} to improve our site.', 'WNYC')|replace({'{{ FEEDBACK }}': 
+          '<a class="link-icon" href="https://airtable.com/shrfQGpXvo9mmmHpJ">send us feedback <svg aria-hidden="true" class="icon-ui rtl:flip"><use href="#lucide-external-link"></use></svg></a>'})}}</h5>
       </div>
       {% endif %}
     {% endif %}
