changes after Sourabhs comment

--- a/wp-content/themes/workingnyc/views/components/utility-nav.twig
+++ b/wp-content/themes/workingnyc/views/components/utility-nav.twig
@@ -1,5 +1,5 @@
 <div class="c-utility wrap">
-  <a class="link-icon mie-auto" href="{{ site.url }}">
+  <a class="link-icon mie-auto" href="{{ return.link }}">
     <svg aria-hidden="true" class="icon-ui rtl:flip">
       <use href="#lucide-chevron-left"></use>
     </svg>
