revert changes on utility-nav file

--- a/wp-content/themes/workingnyc/views/components/utility-nav.twig
+++ b/wp-content/themes/workingnyc/views/components/utility-nav.twig
@@ -4,7 +4,7 @@
       <use href="#lucide-chevron-left"></use>
     </svg>
 
-    <span>{{ __('Home', 'WNYC') }}</span>
+    <span>{{ return.label }}</span>
   </a>
 
   {% for item in cta %}
