dollar sign rectified

--- a/wp-content/themes/workingnyc/views/jobs/job.twig
+++ b/wp-content/themes/workingnyc/views/jobs/job.twig
@@ -39,6 +39,7 @@
       <li>
         <svg class="icon-ui c-card__feature-icon" role="img">
           <title>{{ __('Salary', 'WNYC') }}</title>
+          <use href="#lucide-dollar-sign"></use>
         </svg>
 
         <span>{{ post.salary }}</span>
