--- a/wp-content/themes/workingnyc/src/scss/utilities/background/_background.scss
+++ b/wp-content/themes/workingnyc/src/scss/utilities/background/_background.scss
@@ -161,10 +161,10 @@
 .bg-image-grid__img {
   object-fit: cover;
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: 180px;
+  left: 160px;
+  width: 400px;
+  height: 400px;
 }
 
 .bg-image-video {
