--- a/wp-content/themes/workingnyc/src/scss/_imports.scss
+++ b/wp-content/themes/workingnyc/src/scss/_imports.scss
@@ -1,6 +1,7 @@
 
 @forward '@nycopportunity/standard/src/scss/imports';
 @forward 'utilities/background/background';
+@forward 'utilities/margins/margins';
 @forward '@nycopportunity/pttrn-scripts/src/spinner/spinner';
 
 @forward 'tokens';
