--- a/wp-content/themes/workingnyc/views/objects/newsletter.twig
+++ b/wp-content/themes/workingnyc/views/objects/newsletter.twig
@@ -1,10 +1,10 @@
 <section class="o-newsletter layout-content py-6 relative z-10" data-js="newsletter">
   <div class="pt-2 pb-3 wrap">
-    <h2 class="o-newsletter__heading h4 font-normal">{{ __('Newsletter', 'WNYC-Newsletter') }}</h2>
+    <h4 class="o-newsletter__heading h4 font-normal">{{ __('Newsletter', 'WNYC-Newsletter') }}</h4>
 
     <form action="{{ newsletter_link }}/#content" id="mc-embedded-subscribe-form" method="post" novalidate="true">
       <div class="c-question c-question-single" id="a348d8b2ae03">
-        <label class="c-question__label" for="EMAIL">{{ __('Enter your email to sign up for the Job Ready by Jobs NYC newsletter and stay up-to-date with careers, training, and events.', 'WNYC-Newsletter') }}</label>
+        <label class="c-question__label font-p" for="EMAIL">{{ __('Enter your email to sign up for the Job Ready by Jobs NYC newsletter and stay up-to-date with careers, training, and events.', 'WNYC-Newsletter') }}</label>
 
         <div class="c-question__container">
           <div class="c-question__input">
