--- a/wp-content/themes/workingnyc/src/scss/utilities/background/_background.scss
+++ b/wp-content/themes/workingnyc/src/scss/utilities/background/_background.scss
@@ -161,10 +161,10 @@
 .bg-image-grid__img {
   object-fit: cover;
   position: absolute;
-  top: 180px;
-  left: 160px;
-  width: 400px;
-  height: 400px;
+  top: 20%;
+  left: 20%;
+  width: 50%;
+  height: 50%;
 }
 
 .bg-image-video {
