Homespage-navigation_change_language_to_translate

--- a/wp-content/themes/workingnyc/views/objects/navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/navigation.twig
@@ -23,7 +23,7 @@
       <use href="#nyco-languages"></use>
     </svg>
 
-    <span class="o-navigation__menu-label">{{ __('Languages', 'WNYC') }}</span>
+    <span class="o-navigation__menu-label">{{ __('Translate', 'WNYC') }}</span>
   </button>
   
   <button class="o-navigation__item" data-js="themes">
@@ -33,7 +33,6 @@
 
     <span class="sr-only">Toggle&nbsp;</span><span class="o-navigation__menu-label" data-js-themes="label">{{ __('Theme', 'WNYC') }}</span>
   </button>
-
   <button class="o-navigation__menu-item desktop:hidden mie-0" aria-controls="aria-c-menu" aria-expanded="false" data-js="menu" data-js-menu="open">
     <svg class="o-navigation__menu-icon icon-ui">
       <use href="#lucide-menu"></use>
