Homespage-announcement-card-changes

--- a/wp-content/themes/workingnyc/views/components/announcement.twig
+++ b/wp-content/themes/workingnyc/views/components/announcement.twig
@@ -2,7 +2,7 @@
 {# @For    Post Type #}
 {# @Class  timber-posts/Announcements.php #}
 <article class="c-card c-card-transparent h-full">
-  <header class="c-card__header">
+  <header class="c-card__header pb-2">
     <a href="{{ this.link }}" target="{{ this.target }}" class="c-card__header-link">
       <h5 class="c-card__title">
         {% if this.date|date('U') > this.status_period|date('U') %}
@@ -22,8 +22,8 @@
     </a>
   </header>
 
-  <div class="c-card__body">
-    <div class="c-card__summary">
+  <div class="c-card__body pt-3">
+    <div class="c-card__summary h-18 desktop:h-20 tablet:h-20">
       {{ this.announcement_details|wpautop }}
     </div>
 
