--- a/wp-content/themes/workingnyc/views/components/web-share.twig
+++ b/wp-content/themes/workingnyc/views/components/web-share.twig
@@ -1,7 +1,6 @@
 <div class="c-web-share">
   <div class="c-web-share__wrap">
-    <button class="btn btn-small btn-primary mie-1 hidden tablet:inline-flex" aria-pressed="false" data-copy="web-share-url-{{ this.id }}" data-js="copy">
-      <svg class="icon icon-ui">
+    <button class="btn btn-small btn-primary mie-1 hidden tablet:hidden desktop:hidden" aria-pressed="false" data-copy="web-share-url-{{ this.id }}" data-js="copy">      <svg class="icon icon-ui">
         <use data-js-copy='icon' href='#lucide-copy'></use>
       </svg>
 
