Homespage-header-banner

--- a/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
+++ b/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
@@ -7,3 +7,18 @@
   margin-left: 8rem; /* 128px */
   margin-right: 8rem; /* 128px */
 }
+.ml-95 {
+  margin-left: 95px;
+}
+.px-7{
+  padding-left: 56px;
+  padding-right: 56px;
+}
+.px-26 {
+  padding-left: 104px;
+  padding-right: 104px;
+}
+.py-5{
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
