Homespage-footer-css-changes

--- a/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
+++ b/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
@@ -14,3 +14,13 @@
 .mr-12 {
     margin-right: 48px;
   }
+  .custom-padding {
+    padding-left: 40px;
+  }
+  .custom-margin {
+    margin-right: 48px;
+  }
+  .custom-margin-display {
+    margin-right: 24px;
+    display: inline;
+  }
