--- a/wp-content/themes/workingnyc/views/objects/newsletter.twig
+++ b/wp-content/themes/workingnyc/views/objects/newsletter.twig
@@ -1,5 +1,5 @@
 <section class="o-newsletter py-6 relative z-10" data-js="newsletter">
-  <div class="pt-3 pb-10 tablet:pb-3 desktop:pb-3 desktop:mx-50">
+  <div class="mobile-py-33 tablet:py-3 desktop:py-3 desktop-mx-50 tablet-mx-14">
     <h4 class="o-newsletter__heading">{{ __('Newsletter', 'WNYC-Newsletter') }}</h4>
 
     <form action="{{ newsletter_link }}/#content" id="mc-embedded-subscribe-form" method="post" novalidate="true">
