--- a/wp-content/themes/workingnyc/views/objects/attribution.twig
+++ b/wp-content/themes/workingnyc/views/objects/attribution.twig
@@ -1,4 +1,4 @@
-<footer aria-label="{{ __('Footer', 'WNYC') }}" class="o-attribution relative z-10 pl-10" role="contentinfo">
+<footer aria-label="{{ __('Footer', 'WNYC') }}" class="o-attribution relative z-10" role="contentinfo">
   <nav aria-label="{{ footer_menu.name }}" class="nav-block tablet:nav-inline tablet:flex items-center">
     <a class="uppercase text-small no-underline tablet:inline-flex tablet:p-0 mr-6" href="{{ fn('get_home_url') }}">
       <svg class="fill-text stroke-text text-brand" width="163" height="48" role="img">
@@ -9,7 +9,7 @@
     </a>
 
     {% for m in footer_menu.get_items %}
-    <a class="o-footer__item inline mr-3" href="{{ m.link }}"
+    <a class="o-footer__item inline mr-2 desktop:mr-3 tablet:mr-3" href="{{ m.link }}"
       {% if m.attr_title %}title="{{ m.attr_title }}"{% else %}title="{{ m.title }}"{% endif %}
       {% if m.target %}target="{{ m.target }}"{% endif %}
       {% if m.xfn %}rel="{{ m.xfn }}"{% endif %}>
@@ -20,9 +20,6 @@
 
   <div class="o-attribution__flex o-footer__divider">
     <div>
-      <p class="o-attribution__byline">
-        {{ __('Job Ready by Jobs NYC is maintained by the <span class="sr-only">The Mayor\'s Office for Economic Opportunity and The Mayor\'s Office of Workforce Development</span>', 'WNYC') }}
-      </p>
 
       <svg style="max-width: 100%" width="573" height="65" viewBox="0 0 1509 171" class="fill-text" role="img">
         <title>{{ __('Logo for The New York City Mayor\'s Office for Economic Opportunity and Mayor\'s Office of Talent and Workforce Development', 'WNYC') }}</title>
