announcement cards are now consistently sized and other minor changes

--- a/wp-content/themes/workingnyc/views/components/announcement.twig
+++ b/wp-content/themes/workingnyc/views/components/announcement.twig
@@ -22,8 +22,8 @@
     </a>
   </header>
 
-  <div class="c-card__body pt-3">
-    <div class="c-card__summary h-18 desktop:h-20 tablet:h-20">
+  <div class="c-card__body pt-2 tablet:pt-3">
+    <div class="c-card__summary height-176px overflow-hidden">
       {{ this.announcement_details|wpautop }}
     </div>
 
